# simple-user

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/classes/enums/: todos.py
src/classes/todo/: models.py
