[tool.poetry]
name = "simple-user"
version = "0.1.0"
description = ""
authors = ["Kim Dael <daelkdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
